fixed notch bg color and home text alignment

--- a/styles/global.css
+++ b/styles/global.css
@@ -69,9 +69,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+
 }
 
-html, body {
+body {
   max-width: 100%;
   overflow-x: hidden;
+  @apply bg-bg dark:bg-text
 }
